2007-04-13  Ross Burton  <ross@openedhand.com>

	* applets/windowselector/mb-applet-windowselector.png:
	Update with Sato icon.

2007-04-13  Ross Burton  <ross@openedhand.com>

	* applets/windowselector/windowselector.c:
	Disable the code that changes the icon to reflect the current window.

2007-04-11  Jorn Baayen  <jorn@openedhand.com>

	* matchbox-panel/mb-panel.c: (main):
	Name frame depending on orientation.

2007-04-10  Jorn Baayen  <jorn@openedhand.com>

	* matchbox-panel/mb-panel.c: (main):
	Replace alignment with frame for padding.

2007-04-10  Jorn Baayen  <jorn@openedhand.com>

	* matchbox-panel/mb-panel.c: (load_applet), (main):
	Fix indent.

2007-04-10  Matthew Allum  <mallum@openedhand.com>

	* applets/showdesktop/Makefile.am:
	Add desktop active image.

2007-04-10  Matthew Allum  <mallum@openedhand.com>

	* matchbox-panel/mb-panel.c: 
	Add some default padding to panel edges.

2007-04-09  Jorn Baayen  <jorn@openedhand.com>

	* matchbox-panel/mb-panel-scaling-image.c:
	(mb_panel_scaling_image_init),
	(mb_panel_scaling_image_set_property),
	(mb_panel_scaling_image_get_property), (reload_icon),
	(mb_panel_scaling_image_class_init):
	* matchbox-panel/mb-panel-scaling-image.h:
	Add 'orientation' property.
	(Instead of determining orientation using black magic)

	* applets/battery/battery.c: (mb_panel_applet_create):
	* applets/launcher/launcher.c: (mb_panel_applet_create):
	Set orientation on icon.

	* applets/showdesktop/showdesktop.c: (show_desktop_applet_free),
	(sync), (screen_changed_cb), (button_clicked_cb),
	(mb_panel_applet_create):
	Change icon on state change instead of being a toggle button.

2007-03-12  Ross Burton  <ross@openedhand.com>

	* configure.ac:
	Remove AM_MAINTAINER_MODE.

2007-02-22  Ross Burton  <ross@openedhand.com>

	* applets/windowselector/Makefile.am:
	* applets/windowselector/windowselector.c:
	* applets/windowselector/mb-applet-windowselector.png:
	Ship a window selector icon.
